Updated configuration settings

--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,15 @@
-name : Foundation5/github pages/Jykill starter
-brand : My Project
-description : This is the description of my project
+name : Anagh Sharma
+brand : Portfolio
+description : This is my personal website
 keyword : 
-url : http://daigofuji.github.io/jekyll-foundation-6-starter/
-email : daigo@daigofujiwara.com
-twitter : DaigoFuji
-github : DaigoFuji
-author : Daigo Fujiwara
-year : 2016
+url : https://anaghsharma.github.io
+email : anaghsharma12@gmail.com
+twitter : AnaghSharma
+github : AnaghSharma
+dribbble : AnaghSharma
+behance : AnaghSharma
+author : Anagh Sharma
+year : 2017
 markdown : kramdown
 exclude :
   - node_modules
