Updated footer links

--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ description : This is my personal website
 keyword : 
 url : https://anaghsharma.github.io
 email : anaghsharma12@gmail.com
-twitter : AnaghSharma
-github : AnaghSharma
-dribbble : AnaghSharma
-behance : AnaghSharma
+twitter : https://twitter.com/AnaghSharma
+github : https://github.com/AnaghSharma
+dribbble : https://dribbble.com/AnaghSharma
+behance : https://www.behance.net/AnaghSharma
 author : Anagh Sharma
 year : 2017
 markdown : kramdown
