Updated about page intro

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,12 @@ brand : Portfolio
 description : This is my personal website
 keyword : 
 url : https://anaghsharma.github.io
-email : anaghsharma12@gmail.com
+email : mailto:anaghsharma12@gmail.com
 twitter : https://twitter.com/AnaghSharma
 github : https://github.com/AnaghSharma
 dribbble : https://dribbble.com/AnaghSharma
 behance : https://www.behance.net/AnaghSharma
+facebook : https://www.facebook.com/anaghsharma12
 author : Anagh Sharma
 year : 2017
 markdown : kramdown
