Added LinkedIn in footer

--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,9 @@ github : https://github.com/AnaghSharma
 dribbble : https://dribbble.com/AnaghSharma
 behance : https://www.behance.net/AnaghSharma
 facebook : https://www.facebook.com/anaghsharma12
+linkedin: https://www.linkedin.com/in/anaghsharma/
 author : Anagh Sharma
-year : 2017
+year : 2018
 markdown : kramdown
 include : ['_pages']
 exclude :
