--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name : Anagh Sharma
 brand : Portfolio
 description : This is my personal website
 keyword : 
-url : http://www.anaghsharma.com
+url : https://www.anaghsharma.com
 email : mailto:anaghsharma12@gmail.com
 twitter : https://twitter.com/AnaghSharma
 github : https://github.com/AnaghSharma
