--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-update": "0.0.2",
     "hoek": "^6.1.3",
     "lodash": "^4.17.15",
+    "lodash.template": "^4.5.0",
     "minimatch": "^3.0.4",
     "natives": "^1.1.6",
     "npm": "^6.13.4"
